<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mealmate.ui.home.HomeFragment"
        android:label="@string/home">
        <action
            android:id="@+id/action_home_to_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />
        <action
            android:id="@+id/action_home_to_shopping_list"
            app:destination="@id/navigation_shopping_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.mealmate.ui.recipes.RecipesFragment"
        android:label="@string/recipes">
        <action
            android:id="@+id/action_recipes_to_add_recipe"
            app:destination="@id/navigation_add_recipe" />
        <action
            android:id="@+id/action_recipes_to_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.example.mealmate.ui.shopping.ShoppingListFragment"
        android:label="@string/shopping_list">
        <action
            android:id="@+id/action_shopping_list_to_delegate"
            app:destination="@id/navigation_delegate_shopping" />
        <action
            android:id="@+id/action_shopping_list_to_add_item"
            app:destination="@id/navigation_add_shopping_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mealmate.ui.profile.ProfileFragment"
        android:label="@string/profile">
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_profile_to_edit_profile"
            app:destination="@id/navigation_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe_detail"
        android:name="com.example.mealmate.ui.recipes.RecipeDetailFragment"
        android:label="{recipe_name}">
        <argument
            android:name="recipe_id"
            app:argType="string" />
        <argument
            android:name="recipe_name"
            app:argType="string" />
        <action
            android:id="@+id/action_recipe_detail_to_edit_recipe"
            app:destination="@id/navigation_edit_recipe" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_recipe"
        android:name="com.example.mealmate.ui.recipes.AddRecipeFragment"
        android:label="@string/add_new_recipe" />

    <fragment
        android:id="@+id/navigation_edit_recipe"
        android:name="com.example.mealmate.ui.recipes.EditRecipeFragment"
        android:label="@string/edit_recipe">
        <argument
            android:name="recipe_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_delegate_shopping"
        android:name="com.example.mealmate.ui.shopping.DelegateShoppingFragment"
        android:label="@string/delegate_shopping">
        <argument
            android:name="shopping_list_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.mealmate.ui.auth.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/navigation_register" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.mealmate.ui.auth.RegisterFragment"
        android:label="@string/register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.mealmate.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile" />

    <fragment
        android:id="@+id/navigation_add_shopping_item"
        android:name="com.example.mealmate.ui.shopping.AddShoppingItemFragment"
        android:label="@string/add_shopping_item" />

</navigation>